Thu Jul 23 11:12:06 1998  Alexandre Petit-Bianco  <apbianco@cygnus.com>

	* expr.c (expand_expr): Expand RETURN_EXPR.

Thu Jul 23 11:00:29 1998  Jim Wilson  <wilson@cygnus.com>

	* dwarf2out.c (dwarf2out_finish): Call stripattributes on TEXT_SECTION.

Wed Jul 22 19:10:00 1998  Catherine Moore  <clm@cygnus.com>

        * dwarf2out.c (output_aranges):  Call stripattributes
        for TEXT_SECTION references.
        (output_line_info): Likewise.

Wed Jul 22 14:08:54 1998  David S. Miller  <davem@pierdol.cobaltmicro.com>

	* profile.c (branch_prob): Call allocate_reg_info after outputting
	profile rtl in instrument_arcs.

Wed Jul 22 12:47:49 1998  Jim Wilson  <wilson@cygnus.com>

	* fixinc.irix (math.h): Install wrapper instead of copying.

Wed Jul 22 12:37:14 1998  Alexandre Petit-Bianco <apbianco@cygnus.com>

	* tree.def (EXPR_WITH_FILE_LOCATION): Defined as an 'e' expression
 	so WFL are expanded correctly when contained in a COMPOUND_EXPR.
	* tree.h (EXPR_WFL_EMIT_LINE_NOTE): Change macro not to use
 	lang_flag_0. Added documentation in the flag table.

Tue Jul 21 23:28:35 1998  Klaus Kaempf <kkaempf@rmi.de>

	* cccp.c (do_include): Fix vax c style include handling.

Tue Jul 21 13:28:19 1998  Jason Merrill  <jason@yorick.cygnus.com>

	* cplus-dem.c (do_type): Use demangle_template_value_parm for arrays.

Sun Jul 12 01:27:05 1998  Jason Merrill  <jason@yorick.cygnus.com>

	* fold-const.c (non_lvalue): Don't deal with null pointer 
	constants here.
	(fold, case COMPOUND_EXPR): Wrap a constant 0 in a NOP_EXPR.

Tue Jul 21 15:49:31 1998  David Edelsohn  <edelsohn@mhpcc.edu>

	* rs6000.h (PREDICATE_CODES): Add CONSTANT_P_RTX.
	* rs6000.md (movsi, movdi): Add CONSTANT_P_RTX.
	* rs6000.c (short_cint_operand): Add CONSTANT_P_RTX.
	(u_short_cint_operand): Same.
	(reg_or_cint_operand): Same.
	(logical_operand): Same.
	(input_operand): Same.
	(reg_or_short_operand): Use u_short_cint_operand.

Tue Jul 21 08:56:42 1998  Richard Henderson  <rth@cygnus.com>
