@@ -1,3 +1,9 @@
+Thu Jul 23 13:49:41 1998  Jeffrey A Law  (law@cygnus.com)
+
+	* expr.c (check_max_integer_computation_mode): Allow conversions
+	of constant integers to MAX_INTEGER_COMPUTATION_MODE.
+	(expand_expr): Likewise.
+
 Thu Jul 23 11:12:06 1998  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* expr.c (expand_expr): Expand RETURN_EXPR.
